--- a/src/components/Program.scss
+++ b/src/components/Program.scss
@@ -3,112 +3,112 @@ $card-width: 15rem;
 $card-height: $card-width * 1.5;
 
 .program-wrapper {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    background-color: hsla($hue, 39%, 37%, 0.5);
-    transition: width 0.1s ease-in-out;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: hsla($hue, 39%, 37%, 0.5);
+  transition: width 0.1s ease-in-out;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .program-wrapper.hide {
-    display: none;
+  display: none;
 }
 
 .program {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  // z-index: 3;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  // max-width: ($card-width + 1rem) * 5 - 1rem;
+
+  box-shadow: hsl($hue, 39%, 12%) 0px 7px 29px 0px;
+  background-color: hsl($hue, 39%, 37%);
+  overflow: hidden;
+  // margin: 0.5rem;
+  padding: 0rem;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-size: small;
+
+  p {
+    padding: 0.5rem 0.5rem;
+  }
+
+  img.backdrop {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    // z-index: 3;
-    transform: translate(-50%, -50%);
-    min-width: 100%;
-    // max-width: ($card-width + 1rem) * 5 - 1rem;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.2;
+  }
+
+  img.poster {
+    width: $card-width;
+    height: $card-height;
+    object-fit: cover;
 
     box-shadow: hsl($hue, 39%, 12%) 0px 7px 29px 0px;
-    background-color: hsl($hue, 39%, 37%);
+  }
+
+  .title {
+    width: 100%;
+    padding: 0.5rem 0.5rem;
+    text-align: center;
+    // background-color: hsl($hue, 39%, 37%);
+    color: white;
+    font-size: medium !important;
+    font-weight: bold;
+
+    white-space: nowrap;
     overflow: hidden;
-    // margin: 0.5rem;
-    padding: 0rem;
+    text-overflow: ellipsis;
+  }
+
+  .statistics {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0.5rem 0rem;
+  }
+
+  .statistic {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.2rem;
+
+    // max-width: 40%;
+    width: 45%;
+    padding: 0.2rem 0.5rem;
+    text-align: center;
+    background-color: hsla($hue, 39%, 37%, 0.9);
     color: white;
     font-size: small;
+    font-weight: bold;
+    box-shadow: hsl($hue, 39%, 12%) 0px 7px 29px 0px;
 
-    p {
-        padding: 0.5rem 0.5rem;
+    .name {
+      padding-left: 0.5rem;
     }
 
-    img.backdrop {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100% !important;
-        height: 100%;
-        object-fit: cover;
-        opacity: 0.2;
+    .value {
+      background-color: hsla($hue, 39%, 47%, 0.9);
+      padding: 0.2rem 0.5rem;
+      border-radius: 0.5rem;
+      margin-left: 0.5rem;
     }
-
-    img.poster {
-        width: $card-width;
-        height: $card-height;
-        object-fit: cover;
-
-        box-shadow: hsl($hue, 39%, 12%) 0px 7px 29px 0px;
-    }
-
-    .title {
-        width: 100%;
-        padding: 0.5rem 0.5rem;
-        text-align: center;
-        // background-color: hsl($hue, 39%, 37%);
-        color: white;
-        font-size: medium !important;
-        font-weight: bold;
-    
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-    .statistics {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        align-items: center;
-        margin: 0.5rem;
-    }
-
-    .statistic {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0.2rem;
-
-        max-width: 40%;
-        width: 40%;
-        padding: 0.2rem 0.5rem;
-        text-align: center;
-        background-color: hsla($hue, 39%, 37%, 0.9);
-        color: white;
-        font-size: small;
-        font-weight: bold;
-        box-shadow: hsl($hue, 39%, 12%) 0px 7px 29px 0px;
-
-        .name {
-            padding-left: 0.5rem;
-        }
-
-        .value {
-            background-color: hsla($hue, 39%, 47%, 0.9);
-            padding: 0.2rem 0.5rem;
-            border-radius: 0.5rem;
-            margin-left: 0.5rem;
-        }
-    }
+  }
 }
