--- a/src/index.scss
+++ b/src/index.scss
@@ -1,25 +1,13 @@
-// @use "variables";
-// @import url("https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap");
 
 * {
-    // box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     font-family: "Sora";
 }
 
 html, body, #root {
     height: 100%;
     width: 100%;
-}
-
-body {
-    width: 100%;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    background-color: black;
+    background-color: hsl(233, 39%, 22%);
 }
